--- a/INF321/Prática04/organizacao_pessoal/css/estilos.css
+++ b/INF321/Prática04/organizacao_pessoal/css/estilos.css
@@ -17,3 +17,26 @@ h1 {
     background-color: rgb(255, 255, 128);
     font-size: 10pt;
 }
+
+.anotacao {
+    padding: 5px;
+    background-color: rgb(255, 255, 255);
+    font-size: 9pt;
+    border-radius: 0;
+}
+
+.link {
+    padding: 0;
+    background-color: rgb(255, 128, 240);
+    font-size: 9pt;
+    border-radius: 15px;
+    text-decoration: underline;
+    text-decoration-color: navy;
+  }
+  
+.lista {
+    padding: 5px;
+    background-color: rgb(220, 220, 59);
+    font-size: 9pt;
+    border-radius: 20px;
+}
