--- a/ERU324/newspaper/styles/newspaper.css
+++ b/ERU324/newspaper/styles/newspaper.css
@@ -13,10 +13,15 @@ header {
   line-height: 72px;
   margin-bottom: 20px;
 }
+
 p {
   margin-top: 0;
   margin-bottom: 20px;
+  font-size: 1.1rem;
+  line-height: 25px;
+  text-align: justify;
 }
+
 .head {
   text-align: center;
   position: relative;
@@ -31,6 +36,11 @@ p {
   border-top: 2px solid #2f2f2f;
   padding: 12px 0 12px 0;
 }
+
+.divider {
+  border-top: 3px solid #2f2f2f;
+}
+
 .weatherforcastbox {
   position: relative;
   width: 12%;
@@ -49,17 +59,20 @@ p {
   margin: 30px 2% 0 2%;
 }
 .collumns {
+  width: 100%;
 }
 
 .collumn {
   font-size: 14px;
   line-height: 20px;
-  width: 17.5%;
+  width: 31%;
   display: inline-block;
   padding: 0 1% 0 1%;
   vertical-align: top;
   margin-bottom: 50px;
   transition: all 0.7s;
+  overflow: hidden;
+  /* height: 100%; */
 }
 .collumn + .collumn {
   border-left: 1px solid #2f2f2f;
@@ -81,7 +94,7 @@ p {
 .collumn .headline.hl2 {
   font-weight: 400;
   font-style: italic;
-  font-size: 24px;
+  font-size: 18px;
   box-sizing: border-box;
   padding: 10px 0 10px 0;
 }
@@ -112,7 +125,7 @@ p {
 }
 .collumn .headline.hl4 {
   font-weight: 700;
-  font-size: 12px;
+  font-size: 18px;
   box-sizing: border-box;
   padding: 10px 0 10px 0;
 }
@@ -221,13 +234,54 @@ p {
 .collumn .figcaption {
   font-style: italic;
   font-size: 12px;
+  margin-top: 5px;
 }
 .media {
   -webkit-filter: sepia(80%) contrast(1) opacity(0.8);
   filter: sepia(80%) grayscale(1) contrast(1) opacity(0.8);
   mix-blend-mode: multiply;
+  /* width: 100%; */
+}
+
+.fullmedia {
   width: 100%;
 }
+
+.full {
+  width: 98%;
+}
+
+.image-paragraph {
+  display: inline-block;
+  vertical-align: middle; /* Align the image vertically */
+}
+.image-paragraph img {
+  display: inline-block; /* Ensure the image behaves as an inline element */
+  vertical-align: middle; /* Align the image vertically */
+}
+
+.side {
+  width: 100%;
+  flex: 1;
+  flex-direction: column;
+  vertical-align: top;
+  margin-bottom: 20px;
+
+  .side-left {
+    width: 50%;
+    vertical-align: top;
+    float: left;
+  }
+
+  .side-right {
+    width: 49%;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 1%;
+    margin-top: -4px;
+  }
+}
+
 /*________________________________________________________________________________________________________________________________*/
 /*MEDIAQUERIES*/
 @media only all and (max-width: 1300px) {
@@ -235,16 +289,19 @@ p {
     display: none;
   }
 }
+
 @media only all and (max-width: 1200px) {
   .collumn {
     width: 31%;
   }
 }
+
 @media only all and (max-width: 900px) {
   .collumn {
     width: 47%;
   }
 }
+
 @media only all and (max-width: 600px) {
   .collumn {
     width: 100%;
@@ -258,5 +315,19 @@ p {
     font-size: 60px;
     line-height: 54px;
     overflow: hidden;
+  }
+}
+@media only all and (max-width: 768px) {
+  .side {
+    width: 100%;
+
+    .side-left {
+      width: 100%;
+    }
+
+    .side-right {
+      width: 100%;
+      margin-left: 0;
+    }
   }
 }
