--- a/ERU324/newspaper/styles/newspaper.css
+++ b/ERU324/newspaper/styles/newspaper.css
@@ -22,12 +22,37 @@ p {
   text-align: justify;
 }
 
+ul {
+  /* background-color: red; */
+  /* add a black border on ul */
+  /* border: 1px solid #000; */
+  /* add a border radius */
+  /* border-radius: 5px; */
+  padding-inline-start: 22px;
+
+  li {
+    font-size: 1.1rem;
+    line-height: 25px;
+    text-align: justify;
+    padding-bottom: 10px;
+  }
+}
+
 .head {
   text-align: center;
   position: relative;
 }
 
-.headerobjectswrapper {
+#show-on-pc {
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
+}
+
+.first-image {
+  width: 40%;
+  float: left;
+  margin-right: 20px;
 }
 
 .subhead {
@@ -39,6 +64,7 @@ p {
 
 .divider {
   border-top: 3px solid #2f2f2f;
+  margin-bottom: 1.5rem;
 }
 
 .weatherforcastbox {
@@ -58,6 +84,16 @@ p {
   display: inline-block;
   margin: 30px 2% 0 2%;
 }
+
+.subtopic {
+  font-weight: 700;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-style: italic;
+  font-family: "Playfair Display", serif;
+  padding: 10px 0 10px 0;
+}
+
 .collumns {
   width: 100%;
 }
@@ -80,8 +116,8 @@ p {
 .collumn .headline {
   text-align: center;
   line-height: normal;
-  font-family: "Playfair Display", serif;
   display: block;
+  font-family: "Playfair Display", serif;
   margin: 0 auto;
 }
 .collumn .headline.hl1 {
@@ -148,7 +184,7 @@ p {
 
 .collumn .headline.hl5 {
   font-weight: 400;
-  font-size: 42px;
+  font-size: 38px;
   text-transform: uppercase;
   font-style: italic;
   box-sizing: border-box;
@@ -240,15 +276,26 @@ p {
   -webkit-filter: sepia(80%) contrast(1) opacity(0.8);
   filter: sepia(80%) grayscale(1) contrast(1) opacity(0.8);
   mix-blend-mode: multiply;
-  /* width: 100%; */
 }
 
 .fullmedia {
   width: 100%;
 }
 
+.halfmedia {
+  width: 100% !important;
+}
+
 .full {
-  width: 98%;
+  width: 100% !important;
+}
+
+.one-third {
+  width: 33% !important;
+}
+
+.two-third {
+  width: 62% !important;
 }
 
 .image-paragraph {
@@ -260,26 +307,18 @@ p {
   vertical-align: middle; /* Align the image vertically */
 }
 
-.side {
+.classificado {
+  border: 1px solid #2f2f2f;
+  padding: 10px 15px 10px 15px;
+  margin-top: 5px;
+  border-radius: 10px;
+}
+
+.fullpage {
   width: 100%;
-  flex: 1;
-  flex-direction: column;
-  vertical-align: top;
-  margin-bottom: 20px;
-
-  .side-left {
-    width: 50%;
-    vertical-align: top;
-    float: left;
-  }
-
-  .side-right {
-    width: 49%;
-    display: inline-block;
-    vertical-align: top;
-    margin-left: 1%;
-    margin-top: -4px;
-  }
+  display: flex;
+  flex-direction: row;
+  margin-top: 1%;
 }
 
 /*________________________________________________________________________________________________________________________________*/
@@ -294,6 +333,11 @@ p {
   .collumn {
     width: 31%;
   }
+
+  .first-image {
+    width: 100%;
+    margin-right: 0;
+  }
 }
 
 @media only all and (max-width: 900px) {
@@ -302,13 +346,21 @@ p {
   }
 }
 
-@media only all and (max-width: 600px) {
+@media only all and (max-width: 768px) {
   .collumn {
     width: 100%;
   }
   .collumn + .collumn {
     border-left: none;
-    border-bottom: 1px solid #2f2f2f;
+    border-top: 2px solid #2f2f2f;
+  }
+
+  .one-third {
+    width: 100% !important;
+  }
+
+  .two-third {
+    width: 100% !important;
   }
   header {
     max-width: 320px;
@@ -316,18 +368,12 @@ p {
     line-height: 54px;
     overflow: hidden;
   }
-}
-@media only all and (max-width: 768px) {
-  .side {
-    width: 100%;
 
-    .side-left {
-      width: 100%;
-    }
+  .halfmedia {
+    width: 100% !important;
+  }
 
-    .side-right {
-      width: 100%;
-      margin-left: 0;
-    }
+  .fullpage {
+    flex-direction: column;
   }
 }
